--- a/templates/pages/member.html
+++ b/templates/pages/member.html
@@ -6,7 +6,7 @@
 <div class="contanier">
     <div class="banner"></div>
     <div class="gear-group">
-        <!-- lab member.html -->
+        <!-- lab member.html.html -->
         <div class="gear1" style="top: 15vh;left: 25vw;">
             <div class="introduction" style="background-image: url({{url_for('static',filename='img/tyb.jpg')}});" id="tyb"></div>
         </div>
@@ -21,7 +21,7 @@
         <div class="gear1" style="top: 45vh;left: 54vw;"></div>
         <div class="gear1" style="top: 13vh;left: 68vw;"></div>
 
-        <!-- sup member.html -->
+        <!-- sup member.html.html -->
         <div class="gear2" style="top: 6.5vh;left: 38vw;">
             <div class="introduction" style="background-image: url({{url_for('static',filename='img/tyb.jpg')}});" id="tyb"></div>
         </div>
